# delta_classic

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.claude/: settings.local.json
.github/workflows/: FabricBuild.yml  IntegrationTestLocalFileSystem-v144.yml  IntegrationTestLocalFileSystem-v15.yml  IntegrationTestLocalFileSystem.yml  LinuxBuild.yml  MainDistributionPipeline.yml  TestPipeline.yml
src/: CMakeLists.txt  delta_classic_extension.cpp
src/include/: delta_classic_extension.hpp
src/storage/: CMakeLists.txt  delta_classic_catalog.cpp  delta_classic_schema_entry.cpp  delta_classic_table_entry.cpp  delta_classic_table_set.cpp  delta_classic_transaction.cpp  delta_classic_transaction_manager.cpp
src/storage/include/storage/: delta_classic_catalog.hpp  delta_classic_schema_entry.hpp  delta_classic_table_entry.hpp  delta_classic_table_set.hpp  delta_classic_transaction.hpp  delta_classic_transaction_manager.hpp
test/: generate_test_data.py
test/data/single_schema/table_a/: part-00000-600bc06f-a655-44e9-a44b-9585ede3893b-c000.snappy.parquet
test/data/single_schema/table_b/: part-00000-49cab276-cf2c-49d0-be57-bf9c4b39c81b-c000.snappy.parquet
test/python/: conftest.py  test_catalog_metadata.py  test_error_handling.py  test_multi_schema.py  test_multiple_attach.py  test_read_only.py  test_reattach.py  test_single_schema.py
test/sql/: catalog_metadata.test  error_handling.test  multi_schema.test  multiple_attach.test  pin_snapshot.test  read_only.test  reattach.test  single_schema.test
(+3 files in other folders)
